name: direct-opentype
version: 1.0
license: BSD3
author: Irene Knapp
maintainer: irene.knapp@icloud.com
build-type: Simple
cabal-version: 1.17

library
  exposed-modules: Data.OpenType
  other-modules: LowLevelStructure
  build-depends: base >= 4.6 && < 4.7,
                 bytestring >= 0.10.0.0 && < 1.0,
                 direct-binary-files >= 1.0 && < 2,
                 template-haskell >= 2.8.0.0 && < 3
  hs-source-dirs: Haskell
  default-language: Haskell2010


test-suite test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  other-modules: Data.OpenType
  other-modules: LowLevelStructure
  build-depends: base >= 4.6 && < 4.7,
                 bytestring >= 0.10.0.0 && < 1.0,
                 direct-binary-files >= 1.0 && < 2,
                 template-haskell >= 2.8.0.0 && < 3
  hs-source-dirs: Haskell
  default-language: Haskell2010

